--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">CryptoApp</string>
+    <string name="text_view_label_price">Цена:</string>
+    <string name="text_view_label_min_of_day">Минимум за день:</string>
+    <string name="text_view_label_max_of_day">Максимум за день:</string>
+    <string name="text_view_label_last_deal">Последняя сделка:</string>
+    <string name="text_view_label_last_update">Обновлено:</string>
+    <string name="text_view_separator">/</string>
 </resources>
